chore: remove 536 unnecessary tracked files from repository
This commit removes build artifacts, generated code, caches, and IDE files
that should never have been tracked in git:

REMOVED:
- 217 .class files (compiled Gradle bytecode)
- 13 .bin files (Gradle cache)
- 7 .lock files (Gradle locks)
- 1 .probe file (Gradle probe)
- .gradle/ directory with all cache and metadata
- build/ directory across root and all services
- contracts/build/ with generated protobuf artifacts
- out/ directory (IDE output)
- __pycache__/ directories (Python caches)
- .idea/ directory (IntelliJ settings)
- .vscode/ directory (VS Code settings)
- 2 .jar/.war files (kept gradle-wrapper.jar for reproducibility)

Total: 536 files removed from git tracking

UPDATED:
- Added comprehensive .gitignore with proper categorization
- Excluded gradle-wrapper.jar to keep reproducible builds

This cleanup reduces repository bloat, improves clone/fetch performance,
and ensures only source code and configuration are tracked in git.